# gitclaw

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.lock.backup  Cargo.toml  IDEAS.md  LICENSE  README.md  ROADMAP.md
.github/workflows/: build.yml  ci.yml  main.yml  test.yml  verify.yml
.specs/: TEMPLATE.md  v0.4.0-roadmap.md  v0.6.0-advanced.md  v0.7.0-platform.md  v1.0.0-stability.md
src/: app.rs  banner.rs  checksum.rs  cli.rs  config.rs  extract.rs  github.rs  install.rs  lib.rs  main.rs  platform.rs  registry.rs  self_update.rs  util.rs
src/cli/: mod.rs
src/core/: alias.rs  cache.rs  channel.rs  checksum.rs  config.rs  constants.rs  export.rs  extract.rs  install.rs  lockfile.rs  mod.rs  registry.rs  run.rs  semver.rs  updater.rs  util.rs
src/extract/: mod.rs
src/github/: mod.rs
src/network/: github.rs  mod.rs  platform.rs
src/output/: mod.rs
src/platform/: mod.rs
src/registry/: mod.rs
tests/: alias.rs  cache.rs  channel.rs  channel_persist.rs  checksum.rs  config.rs  error_handling.rs  export_import.rs  extract.rs  fixtures.rs  github.rs  local.rs  lockfile.rs  outdated.rs  platform.rs  registry.rs  semver.rs  util.rs
tests/unit/: checksum.rs  error_handling.rs  extract.rs  platform.rs
