[package]
name = "gitclaw"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "=4.4.18", features = ["derive", "env"] }
tokio = { version = "=1.32", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "=0.11.22", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "=1.0.188", features = ["derive"] }
serde_json = "=1.0.107"
toml = "=0.7.8"
tar = "=0.4.40"
flate2 = "=1.0.28"
bzip2 = "=0.4.4"
xz2 = "=0.1.7"
zip = { version = "=0.6.6", default-features = false, features = ["deflate"] }
anyhow = "=1.0.75"
thiserror = "=1.0.49"
color-eyre = { version = "=0.6.3", default-features = false }
indicatif = "=0.17.7"
dirs = "=5.0.1"
tempfile = "=3.8.0"
chrono = { version = "=0.4.31", default-features = false, features = ["clock", "std"] }
time = "=0.3.30"
walkdir = "=2.4.0"
futures = "=0.3.29"
tracing = "=0.1.40"
tracing-subscriber = { version = "=0.3.18", features = ["env-filter"] }
indexmap = "=2.0.2"
url = "=2.4.1"
base64 = "=0.21.7"
base64ct = "=1.6.0"

[dev-dependencies]
assert_cmd = "2.0.12"
